# imagerenamer

./: .gitignore  README.md  imagerenamer.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
imagerenamer/: imagerenamer.py
src/: imagerenamer.py
