[tool.poetry]
name = "imagerenamer"
version = "0.1.0"
description = ""
authors = ["Jonatan Søgaard <jonatanjuhl@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ExifRead = "^2.3.2"
fire = "^0.4.0"
tqdm = "^4.59.0"
setuptools = "^54.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
imagerenamer = "imagerenamer:main"