[tool.poetry]
name = "imagerenamer"
version = "0.2.1"
description = "An image file batch renamer"
authors = ["Jonatan Søgaard <jonatanjuhl@icloud.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/JSogaard/imagerenamer"

[tool.poetry.dependencies]
python = "^3.8"
ExifRead = "^2.3.2"
fire = "^0.4.0"
tqdm = "^4.59.0"
setuptools = "^54.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
imagerenamer = "imagerenamer:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
