[tool.poetry]
name = "imagerenamer"
version = "0.4.3"
description = "An image file batch renamer"
authors = ["Jonatan Søgaard <jonatanjuhl@icloud.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/JSogaard/imagerenamer"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ExifRead = "^2.3.2"
tqdm = "^4.59.0"
setuptools = "^54.2.0"
pendulum = "^2.1.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
imagerenamer = "imagerenamer.imagerenamer:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
