[metadata]
name = imagerenamer
version = 0.0.1
author = Jonatan Søgaard
author_email = jonatanjuhl@icloud.com
description = Package for batch renaming image files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JSogaard/imagerenamer
classifiers = 
    Programming Language :: Python :: 3
    License :: LGPL
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src